login et traduction

--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -2,11 +2,11 @@
 <div class="footer center section" id="section3">
 	<br/><br/>
 	<div class="row80">
-		<h2 class="h2_contact">
+		<h3>
 			Contact
-		</h2>
+		</h3>
 
-		<form id="" method="post">
+		<form id="contact_form" method="post">
 	        <div id="" class="">
 	        	<div class="form-group">
 	        		<div class="col-md-2">
@@ -43,7 +43,7 @@
 		                <label class="control-label" for="corpsMail">Demande</label>
 	            	</div>
 	                <div class="input-icon col-md-10">
-	                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="Texte limité à 2000 caractères"></textarea>
+	                	<textarea class="form-control placeholder-no-fix" name="corpsMail" id="corpsMail" placeholder="Message"></textarea>
 	                </div>
 	            </div>
 	        </div>
