--- a/src/LBF/MainBundle/Resources/views/Main/confirm.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/confirm.html.twig
@@ -20,9 +20,9 @@
 
 		        <div id="breadcrumb" class="center row80">
 			        <div class="row">
-		              	<h2>
+		              	<h3>
 		                  	{{ 'header.titles.myCart' | trans }}
-		              	</h2>
+		              	</h3>
 		            </div>
 		            <div class="row">
 	                  	<div class="inline_div">
@@ -50,9 +50,9 @@
 							$.cookie("sessionCart", null);
 			            }
 			        </script>
-		        	<p class="center">
+		        	<div class="row center cart_content">
 		        		{{ 'cart.titles.thankYou' | trans }}
-		        	</p>
+		        	</div>
 		    	</div>
 			</div>
 
