--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -102,17 +102,18 @@
 							<div class="col-md-2 col-xs-2"></div>
 			        		<div class="col-md-8 col-xs-8">
 								<h2>
-									{{ 'main.titles.title_meat' | trans }}<br/>
+									{{ 'main.titles.title_meat' | trans }}
+									<!-- <br/>
 									<span>
 										{{ 'main.titles.title_meat_s' | trans }}
-									</span>
+									</span> -->
 								</h2>
 			        		</div>
 							<div class="col-md-2 col-xs-2 white" >
 								<a href="{{ path('lbf_main_homepage') }}#ourProducts" class="no_style_a">
-						          	<button class="btn btn-log uppercase">
-						          		<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
+						          	<button class="btn btn-login uppercase">
 										{{ 'main.actions.buy' | trans }}
+						          		<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
 						          	</button>
 						        </a>
 							</div>
@@ -121,61 +122,67 @@
 						<div class="row">
 
 							<div class="col-md-3 col-xs-3 center">
-								<img alt="Choice" src="{{ asset('img/system/icons/choice.png') }}" class="icon_presentation"/>
-								<h3> {{ 'main.titles.variatyOfChoice' | trans }} </h3>
-								<p class="center">
-									{{ 'main.content.variatyOfChoice' | trans }}
-									<br/>
-									<br/>
+								<button type="button" class="no_style_button" data-toggle="modal" data-target="#choiceModal">
+									<img alt="Choice" src="{{ asset('img/system/icons/choice.png') }}" class="icon_presentation"/>
+									<h3> {{ 'main.titles.variatyOfChoice' | trans }} </h3>
+									<p class="center">
+										{{ 'main.content.variatyOfChoice' | trans }}
+										<br/>
+										<br/>
 
-									<!-- Button trigger modal -->
-									<button type="button" class="read-more no_style_button" data-toggle="modal" data-target="#choiceModal">
-										{{ 'main.actions.learnMore' | trans }}
-									</button> >
-								</p>
+										<!-- Button trigger modal -->
+										<a class="read-more no_style_a" >
+											{{ 'main.actions.learnMore' | trans }}
+										</a> >
+									</p>
+								</button>
 							</div>
 							<div class="col-md-3 col-xs-3 center">
-								<img alt="Quality" src="{{ asset('img/system/icons/quality.png') }}" class="icon_presentation"/>
-								<h3> {{ 'main.titles.qualityProduct' | trans }} </h3>
-								<p class="center">
-									{{ 'main.content.qualityProduct' | trans }}
-									<br/>
-									<br/>
+								<button class="no_style_button" type="button" data-toggle="modal" data-target="#qualityModal">
+									<img alt="Quality" src="{{ asset('img/system/icons/quality.png') }}" class="icon_presentation"/>
+									<h3> {{ 'main.titles.qualityProduct' | trans }} </h3>
+									<p class="center">
+										{{ 'main.content.qualityProduct' | trans }}
+										<br/>
+										<br/>
 
-									<!-- Button trigger modal -->
-									<button type="button" class="read-more no_style_button" data-toggle="modal" data-target="#qualityModal">
-										{{ 'main.actions.learnMore' | trans }}
-									</button> >
-								</p>
+										<!-- Button trigger modal -->
+										<a class="read-more no_style_a" >
+											{{ 'main.actions.learnMore' | trans }}
+										</a> >
+									</p>
+								</button>
 							</div>
 							<div class="col-md-3 col-xs-3 center">
-								<img alt="Security" src="{{ asset('img/system/icons/security.png') }}" class="icon_presentation"/>
-								<h3> {{ 'main.titles.securedPayment' | trans }} </h3>
-								<p class="center">
-									{{ 'main.content.securedPayment' | trans }}
-									<br/>
-									<br/>
+								<button type="button" class="no_style_button" data-toggle="modal" data-target="#securityModal">
+									<img alt="Security" src="{{ asset('img/system/icons/reservation.png') }}" class="icon_presentation"/>
+									<h3> {{ 'main.titles.reservation' | trans }} </h3>
+									<p class="center">
+										{{ 'main.content.reservation' | trans }}
+										<br/>
+										<br/>
 
-									<!-- Button trigger modal -->
-									<button type="button" class="read-more no_style_button" data-toggle="modal" data-target="#securityModal">
-										{{ 'main.actions.learnMore' | trans }}
-									</button> >
-								</p>
+										<!-- Button trigger modal -->
+										<a class="read-more no_style_a" >
+											{{ 'main.actions.learnMore' | trans }}
+										</a> >
+									</p>
+								</button>
 							</div>
 							<div class="col-md-3 col-xs-3 center">
-								<img alt="Products" src="{{ asset('img/system/icons/products.png') }}" class="icon_presentation"/>
-								<h3> {{ 'main.titles.ourProducts' | trans }} </h3>
-								<p class="center">
-									{{ 'main.content.ourProducts' | trans }}
-									<br/>
-									<br/>
+						        <a href="{{ path('lbf_main_homepage') }}#ourProducts" class="no_style_a">
+									<img alt="Products" src="{{ asset('img/system/icons/products.png') }}" class="icon_presentation"/>
+									<h3> {{ 'main.titles.ourProducts' | trans }} </h3>
+									<p class="center">
+										{{ 'main.content.ourProducts' | trans }}
+										<br/>
+										<br/>
 
-							        <a href="{{ path('lbf_main_homepage') }}#ourProducts" class="no_style_a">
-							          	<button class="read-more no_style_button">
-											{{ 'main.actions.discover' | trans }}
-							          	</button>
-							        </a> >
-								</p>
+								          	<button class="read-more no_style_button">
+												{{ 'main.actions.discover' | trans }}
+								          	</button> >
+									</p>
+						        </a>
 							</div>
 						</div>
 					</div>
@@ -197,9 +204,9 @@
 							</h2>
 		        		</div>
 						<div class="col-md-2 col-xs-2 white">
-							<button class="btn btn-log" onClick="addToSessionCart()">
-								<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
+							<button class="btn btn-login" onClick="addToSessionCart()">
 								{{ 'header.titles.myCart' | trans }}
+								<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
 							</button>
 						</div>
 					</div>
@@ -596,7 +603,7 @@
 					</div>
 					<br/>
 					<br/>
-					<div class="row">
+					<div class="row bio">
 						
 						<!-- <div class="col-md-2 col-xs-2 right">
 							<img src="{{ asset('img/creators/frise.png') }}" alt="Frise" class="frise_history"/>
