--- a/src/LBF/UserBundle/Resources/views/User/indexUser.html.twig
+++ b/src/LBF/UserBundle/Resources/views/User/indexUser.html.twig
@@ -265,7 +265,7 @@
 										<br/><br/>
 									</div>
 
-									<input type="submit" class="btn btn-log float-right validate_button"  
+									<input type="submit" class="btn btn-login float-right validate_button"  
 										value="{{'user.actions.save' | trans }}"/>
 								</div>
 
@@ -537,7 +537,7 @@
 
 									<!-- Et pour le reste du formulaire ... ;) -->
 									{{ form_widget(formEditUser) }}
-									<input type="submit" class="btn btn-log  float-right"
+									<input type="submit" class="btn btn-login  float-right"
 										value="{{'user.actions.save' | trans }}"/>
 								</div>
 							</form>
