--- a/src/LBF/AdminBundle/Resources/views/Admin/indexAdmin.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/indexAdmin.html.twig
@@ -164,18 +164,18 @@
 					                              	{% if single_order.status == 'confirm' %}
 						                              	<a href="javascript:areYouSureComplete('{{ path('lbf_admin_complete', {'orderId':single_order.id}) }}')">
 						                              		<button class="btn btn-admin">
-							                              		<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+							                              		<span class="glyphicon black glyphicon-ok" aria-hidden="true"></span>
 						                              		</button>
 						                              	</a>
 					                              	{% endif %}
 						                              	<a href="{{ path('lbf_admin_answer', {'orderId':single_order.id}) }}">
 						                              		<button class="btn btn-admin">
-							                              		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+							                              		<span class="glyphicon black glyphicon-pencil" aria-hidden="true"></span>
 						                              		</button>
 						                              	</a>
 						                              	<a href="javascript:areYouSureDelete('{{ path('lbf_admin_delete', {'orderId':single_order.id}) }}')">
 						                              		<button class="btn btn-admin">
-							                              		<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+							                              		<span class="glyphicon black glyphicon-trash" aria-hidden="true"></span>
 						                              		</button>
 						                              	</a>
 						                              	<script type="text/javascript">
@@ -271,7 +271,7 @@
 					                              <td class="center">
 					                              		<a href="javascript:areYouSureDeleteComplete('{{ path('lbf_admin_delete', {'orderId':single_order.id}) }}')">
 						                              		<button class="btn btn-admin">
-							                              		<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+							                              		<span class="glyphicon black glyphicon-trash" aria-hidden="true"></span>
 						                              		</button>
 						                              	</a>
 						                              	<script type="text/javascript">
