--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -18,7 +18,7 @@
 			<div class="section" id="section0">
 						<div class="welcome_page">
 					      <div class="logo_welcome">
-					        <img src="{{ asset('img/system/logo/LeBuffetFrances_Final_Small.png') }}" alt="Logo" class="logo_welcome_img"/>
+					        <img src="{{ asset('img/system/logo/Final.png') }}" alt="Logo" class="logo_welcome_img"/>
 					      </div>
 					    </div>
 				<div class="presentation_photos row">
