--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -13,6 +13,26 @@
         Le Buffet Frances
       {% endblock %}
     </title>
+
+    <link rel="apple-touch-icon" sizes="57x57" href="{{ asset('favicon/apple-icon-57x57.png') }}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{ asset('favicon/apple-icon-60x60.png') }}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ asset('favicon/apple-icon-72x72.png') }}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('favicon/apple-icon-76x76.png') }}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ asset('favicon/apple-icon-114x114.png') }}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ asset('favicon/apple-icon-120x120.png') }}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ asset('favicon/apple-icon-144x144.png') }}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ asset('favicon/apple-icon-152x152.png') }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('favicon/apple-icon-180x180.png') }}">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{{ asset('favicon/android-icon-192x192.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ asset('favicon/favicon-96x96.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('favicon/favicon-16x16.png') }}">
+    <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}" />
+    <link rel="icon" type="image/ico" href="{{ asset('favicon.ico') }}" />
+    <link rel="manifest" href="{{ asset('favicon/manifest.json') }}">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{{ asset('favicon/ms-icon-144x144.png') }}">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="" name="description"/>
@@ -43,8 +63,6 @@
       <link rel="stylesheet" href="{{ asset_url }}" type="text/css" media="screen"/>
     {% endstylesheets %}
         
-    <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}" />
-    <link rel="icon" type="image/ico" href="{{ asset('favicon.ico') }}" />
 
 
 </head>
@@ -87,22 +105,23 @@
             {% endblock body %}  
             <script type="text/javascript">
               $(document).ready(function() {
+                var header_height = $('#header').height() + 5;
                 $('#fullpage').fullpage({
                   anchors: ['mainSection', 'ourProducts', 'aboutUs', 'footerSection'],
-                  menu: '#menu',
-                  scrollingSpeed: 1000,  // Other
-                  scrollOverflow: true,
-                  allowScrolling: true,
-                  // autoScrolling: false,
-                  css3: true,
-                  // slidesNavigation: false,
-                  controlArrows: false,
-                  // loopHorizontal: false,
+                  // menu: '#menu',
+                  paddingTop: header_height+'px',
+                  verticalCentered: false,
                   navigation: true,
                   navigationPosition: 'right',
-                  // responsive: 1200,
-                  verticalCentered: false,
-                  paddingTop: '50px',
+                  responsive: 900,
+                  // scrollingSpeed: 1000,  // Other
+                  // scrollOverflow: true,
+                  // allowScrolling: true,
+                  // autoScrolling: true,
+                  // controlArrows: true,
+                  // css3: true,
+                  // slidesNavigation: false,
+                  // loopHorizontal: false,
                   // sectionSelector: '.section',
                   // slideSelector: '.slide',
                   afterLoad: function(anchorLink, index){
