--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -54,14 +54,25 @@
 					    <!-- Jssor Slider Begin -->
 					    <!-- You can move inline styles to css file or css block. -->
 						<div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 1200px;
-					        height: 400px; margin:auto;">
+					        height: 400px; margin:auto; overflow: hidden !important;">
 					        <!-- Slides Container -->
-					        <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1200px; height: 400px;
-					            overflow: hidden;">
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/1.jpg') }}" />
-					                <!-- <div u="thumb">Une viande de qualité,</div> -->
-					            </div>
+					        <div id="slider1_container_content" u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1200px; height: 400px; overflow: hidden;">
+
+					            <script type="text/javascript">
+									var slider_height = $('#slider1_container').width() * 0.2;
+									var window_height = window.innerHeight  * 0.3;
+									if (window_height > slider_height) {
+										$('#slider1_container').css({'height':window_height+'px'});
+									}
+									else {
+										$('#slider1_container').css({'height':slider_height+'px'});
+									}
+								</script>
+								<div>
+									<!-- <div u=image style="width: 100%; background-image: url("{{ asset('img/presentation/1.jpg') }}"); background-size: cover; background-position: 50%;">
+									</div> -->
+									<img u=image src="{{ asset('img/presentation/1.jpg') }}" />
+								</div>
 					            <div>
 					                <img u=image src="{{ asset('img/presentation/2.jpg') }}" />
 					                <!-- <div u="thumb">Une fidélisation à un produit,</div> -->
@@ -98,15 +109,11 @@
 					</div>
 
 					<div class="presentation_texte row">
-						<div class="row center">
+						<div class="row center title_div">
 							<div class="col-md-2 col-xs-2"></div>
 			        		<div class="col-md-8 col-xs-8">
 								<h2>
 									{{ 'main.titles.title_meat' | trans }}
-									<!-- <br/>
-									<span>
-										{{ 'main.titles.title_meat_s' | trans }}
-									</span> -->
 								</h2>
 			        		</div>
 							<div class="col-md-2 col-xs-2 white" >
@@ -118,9 +125,7 @@
 						        </a>
 							</div>
 						</div>
-						<br/>
 						<div class="row">
-
 							<div class="col-md-3 col-xs-3 center">
 								<button type="button" class="no_style_button" data-toggle="modal" data-target="#choiceModal">
 									<img alt="Choice" src="{{ asset('img/system/icons/choice.png') }}" class="icon_presentation"/>
@@ -197,10 +202,6 @@
 		        		<div class="col-md-8 col-xs-8">
 							<h2>
 								{{ 'ourProducts.titles.title_ourProducts' | trans }}
-								<br/>
-								<span>
-									{{ 'ourProducts.titles.title_ourProducts_s' | trans }}
-								</span>
 							</h2>
 		        		</div>
 						<div class="col-md-2 col-xs-2 white">
@@ -211,8 +212,6 @@
 						</div>
 					</div>
 					<br/>
-					<br/>
-
 
 					<!-- Product content -->
 					{% if allProducts|length > 0 %}
@@ -602,62 +601,24 @@
 						</div>
 					</div>
 					<br/>
-					<br/>
 					<div class="row bio">
-						
-						<!-- <div class="col-md-2 col-xs-2 right">
-							<img src="{{ asset('img/creators/frise.png') }}" alt="Frise" class="frise_history"/>
+						<div class="row90">
+							<div class="col-md-4 col-xs-4 sep_dotted">
+								<img src="{{ asset('img/creators/aude.jpg') }}" alt="Aude" class="creator_img"/>
+								<h4>Aude de Penfentenyo </h4>
+								Originaire du sud-ouest de la France, région du foie gras. Le raffinement culinaire français n’a pas de secret pour elle. Grâce à son sens de l’accueil, vous voyagerez quelques instants à travers la France. Soif de découvertes et de rencontres, elle décide avec sa famille de tout lâcher pour réaliser leurs rêves à Cusco !
+							</div>
+							<div class="col-md-4 col-xs-4 sep_dotted">
+								<img src="{{ asset('img/creators/antoine.jpg') }}" alt="Antoine" class="creator_img"/>
+								<h4>Antoine de Penfentenyo </h4>
+								Français, originaire de Bretagne, une des premières régions productrices de porcs au monde. Il s’est fait la main dès l’enfance à la découpe et à la transformation de la viande. Soif de faire partager la culture culinaire française à son pays d’adoption, il décide avec sa famille de tout lâcher pour réaliser leurs rêves à Cusco !
+							</div>
+							<div class="col-md-4 col-xs-4">
+								<img src="{{ asset('img/creators/pierre-arnaud.jpg') }}" alt="Pierre-Arnaud" class="creator_img"/>
+								<h4>Pierre-Arnaud Destremau</h4>
+								Ingénieur français,  il rejoint l’équipe en janvier 2015 pour mettre à profit ses compétences dans la communication. Passionné de voyages et de rencontres, il décide de casser sa routine pour découvrir le Pérou. Voyagez dans notre univers culinaire grâce à ses talents !
+							</div>
 						</div>
-						<div class="col-md-10 col-xs-10"> -->
-							<div class="row">
-								<div class="row80">
-									<div class="col-md-2 col-xs-2">
-										<div class="product_img_div">
-											<img src="{{ asset('img/creators/antoine.jpg') }}" alt="Antoine" class="product_img"/>
-										</div>
-									</div>
-									<div class="col-md-10 col-xs-10">
-										<div class="row">
-											<h4>Antoine de Penfentenyo </h4>
-											Français, originaire de Bretagne, une des premières régions productrices de porcs au monde. Il s’est fait la main dès l’enfance à la découpe et à la transformation de la viande. Soif de faire partager la culture culinaire française à son pays d’adoption, il décide avec sa famille de tout lâcher pour réaliser leurs rêves à Cusco!
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="sep_dotted"></div>
-							<div class="row">
-								<div class="row80">
-									<div class="col-md-10 col-xs-10">
-										<div class="row">
-											<h4>Aude de Penfentenyo </h4>
-											Originaire du sud-ouest de la France, région du foie gras. Le raffinement culinaire français n’a pas de secret pour elle. Grâce à son sens de l’accueil, vous voyagerez quelques instants à travers la France. Soif de découvertes et de rencontres, elle décide avec sa famille de tout lâcher pour réaliser leurs rêves à Cusco !
-										</div>
-									</div>
-									<div class="col-md-2 col-xs-2">
-										<div class="product_img_div">
-											<img src="{{ asset('img/creators/aude.jpg') }}" alt="Aude" class="product_img"/>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="sep_dotted"></div>
-							<div class="row">
-								<div class="row80">
-									<div class="col-md-2 col-xs-2">
-										<div class="product_img_div">
-											<img src="{{ asset('img/creators/pierre-arnaud.jpg') }}" alt="Pierre-Arnaud" class="product_img"/>
-										</div>
-									</div>
-									<div class="col-md-10 col-xs-10">
-										<div class="row">
-											<h4>Pierre-Arnaud Destremau</h4>
-											Ingénieur français,  il rejoint l’équipe en janvier 2015 pour mettre à profit ses compétences dans la communication. Passionné de voyages et de rencontres, il décide de casser sa routine pour découvrir le Pérou. Voyagez dans notre univers culinaire grâce à ses talents!
-										</div>
-									</div>
-								</div>
-							</div>
-							
-						<!-- </div> -->
 					</div>
 				</div>
 			</div>
