--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -3,8 +3,8 @@
 /* -----------------------------------------------    MAIN STYLE   -------------------------------------------------- */
 
 html {
-	min-width: 1000px;
-	min-height: 700px;
+	/*min-width: 1000px;
+	min-height: 700px;*/
 	width: 100%;
 	/*background-color: rgba(0,0,0,0.9); */
 	background-image: url('../img/system/defaults/background_default_medium.png');
@@ -16,8 +16,8 @@ body
 	width: 100%;
 	background-color: transparent;
 	font-family: 'sakkal_majallaregular';  /* existencelight */
-	font-weight: 100;
-
+	font-weight: 100 !important;
+	line-height: 120%;
 	color: rgba(41,41,41,0.95) !important;
 }
 
@@ -56,7 +56,7 @@ h1
 	margin-top: 0 !important;
 	text-align: center;
 	font-family: 'espacio';
-	font-weight: 700;
+	font-weight: 200;
 }
 @media (min-width: 1201px) {
 	h1 {
@@ -77,20 +77,32 @@ h1
 h2
 {	
 	margin: 0;
-	padding: 10px;
-	font-weight: 600;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 0px !important;
+	font-weight: 300 !important;
 	color: inherit;
 }
 h2 span {
 	margin: 0 !important;
 	padding: 0 !important;
-	font-weight: 200;
+	font-weight: 100 !important;
 	position: relative;
-	left: 50px;
+	top: -10px;
 }
-@media (min-width: 901px) {
+@media (min-width: 1201px) {
 	h2 {
-		font-size: 3em;
+		padding-top: 8px !important;
+		font-size: 2.7em;
+	}
+	h2 span {
+		font-size: 0.8em;
+	}
+}
+@media (min-width: 901px) and (max-width: 1200px){
+	h2 {
+		padding-top: 3px !important;
+		font-size: 2.2em;
 	}
 	h2 span {
 		font-size: 0.7em;
@@ -98,27 +110,33 @@ h2 span {
 }
 @media (max-width: 900px) {
 	h2 {
-		font-size: 1.8em;
+		padding-top: 0px !important;
+		font-size: 1.4em;
 	}
 	h2 span {
-		font-size: 0.5em;
+		font-size: 0.6em;
 	}
 }
 
 h3
 {	
-	padding: 0;
-	margin: 0;
+	padding: 0 !important;
+	margin: 0 !important;
 	color: inherit;
 }
-@media (min-width: 901px) {
+@media (min-width: 1201px) {
 	h3 {
-		font-size: 2.2em;
+		font-size: 2.1em;
+	}
+}
+@media (min-width: 901px) and (max-width: 1200px){
+	h3 {
+		font-size: 1.6em;
 	}
 }
 @media (max-width: 900px) {
 	h3 {
-		font-size: 1.4em;
+		font-size: 1.1em;
 	}
 }
 
@@ -126,16 +144,22 @@ h4
 {	
 	padding: 0;
 	margin: 0;
-	text-align: left;
+	margin-bottom: 10px;
+	text-align: center;
 }
-@media (min-width: 901px) {
+@media (min-width: 1201px) {
 	h4 {
 		font-size: 1.8em;
 	}
 }
+@media (min-width: 901px) and (max-width: 1200px){
+	h4 {
+		font-size: 1.3em;
+	}
+}
 @media (max-width: 900px) {
 	h4 {
-		font-size: 1.2em;
+		font-size: 0.9em;
 	}
 }
 
@@ -264,16 +288,22 @@ p {
 	text-align: left;
 	color: inherit;
 }
-@media (min-width: 901px) {
+@media (min-width: 1201px) {
 	p {
-		font-size: 1.3em;
+		font-size: 1.4em;
+	}
+}
+@media (min-width: 901px) and (max-width: 1200px){
+	p {
+		font-size: 1.1em;
 	}
 }
 @media (max-width: 900px) {
 	p {
-		font-size: 0.9em;
+		font-size: 0.7em;
 	}
 }
+
 strong {
 	font-weight: 900;
 }
@@ -281,11 +311,17 @@ strong {
 	width: 100%;
 	margin: 0;
 }
+.row90 {
+	width: 90%;
+	margin-left: 5%;
+	margin-top: 0 !important;
+	margin-bottom: 0 !important;
+}
 .row80 {
 	width: 80%;
 	margin-left: 10%;
-	margin-top: 0;
-	margin-bottom: 0;
+	margin-top: 0 !important;
+	margin-bottom: 0 !important;
 }
 .row60 {
 	width: 60%;
@@ -643,8 +679,8 @@ strong {
 }
 
 .logo_welcome {
-	margin-left: 39%;
-	width: 22%;
+	margin-left: 41%;
+	width: 18%;
 	position: absolute !important;
 	top : 68px !important;
 	z-index: 999999 !important;
@@ -661,7 +697,6 @@ strong {
 .content_presentation {
 	margin-bottom: 0;
 	border-bottom: 5px solid rgba(41,41,41,0.95); /* #d10909 */
-	position: relative;
 	/*top: -20px;*/
 	z-index: 10 !important;
 }
@@ -756,17 +791,30 @@ a.captionOrange:hover
 
 
 .presentation_texte {
-	margin-top: 0;
+	margin-top: 5px;
 	padding: 10px 0;
 	color: inherit;
 }
 .icon_presentation {
-	width: 66px;
-	height: 66px;
+	width: 30%;
 }
 .icon_presentation_2 {
 	margin-left: 5%;
 	width: 90%;
+}
+
+.title_div {
+	margin-top: 0;
+}
+@media (min-width: 1201px) {
+	.title_div {
+		margin-bottom: 20px !important;
+	}
+}
+@media (max-width: 1200px){
+	.title_div {
+		margin-bottom: 0px !important;
+	}
 }
 
 .read-more {
@@ -820,6 +868,7 @@ a.captionOrange:hover
 
 
 .nav-tabs {
+	margin-top: 0 !important;
 	font-size: 1.5em;
 }
 .nav-tabs li {
@@ -888,14 +937,13 @@ a.captionOrange:hover
 .tabbable .active .btn-choice .inner_arrow{
 	opacity: 1;
 }
-.product_img_div {
-}
+
 .product_img {
 	border-radius: 50%;
 	border: 1px solid rgba(41,41,41,0.5);
 	width: 100%;
 	margin-bottom: 20px;
-	margin-top: 5px;
+	margin-top: 20px;
 }
 /*.product_img:hover {
 	cursor: pointer;
@@ -907,11 +955,15 @@ a.captionOrange:hover
 }
 
 .sep_dotted {
-	margin-left: 10%;
-	width: 80%;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	border-bottom: 1px dotted rgba(41,41,41,0.5);
+	border-right: 1px dotted rgba(41,41,41,0.5);
+}
+.creator_img {
+	border-radius: 50%;
+	border: 1px solid rgba(41,41,41,0.5);
+	margin-left: 25%;
+	width: 50%;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 .add_buttons {
@@ -946,8 +998,8 @@ a.captionOrange:hover
 	color: white;
 	font-weight: 900;
 	font-size: 1.2em;
-	/*position: relative;
-	top: 5px;*/
+	position: relative;
+	top: 5px;
 	background-color: rgba(41,41,41,0.5);
 	padding: 5px 2px 5px 8px;
 }
@@ -1004,6 +1056,8 @@ a.captionOrange:hover
 
 .bio {
 	font-size: 1.3em !important;
+	line-height: 130%;
+	text-align: justify;
 }
 
 /* ------------------------------------------------------ Login ------------------------------------------------------ */
